--- a/css/estilos.css
+++ b/css/estilos.css
@@ -132,6 +132,7 @@ body{
 
 }
 .btn-blue{
+  background: transparent;
   display:inline-block;
   color: #43A230;
   text-transform: uppercase;
@@ -229,7 +230,7 @@ body{
 .contact-row{
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-bottom: 10px;
+
   overflow: hidden;
 }
 .contact-column{
@@ -246,6 +247,9 @@ body{
   text-transform: uppercase;
   font-weight: 700;
   font-size: 16px;
+  margin-bottom: 10px;
+  display:  inline-block;
+  padding: 0 5px;
 
 }
 .contact-column .contac-input-text{
@@ -257,5 +261,36 @@ body{
   font-size: 18px;
   padding-left: 10px;
   padding-right: 10px;
-
+}
+.contact-column.--width100{
+  width: 100%;
+}
+.contact-column textarea{
+  background: #ffffff;
+  border: 0;
+  border-bottom: 6px solid #43A230;
+  width: 100%;
+  height: 150px;
+}
+.footer{
+  background: #d1d1d1;
+  margin-top: 10px;
+}
+.footer-wrapper{
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+  text-align: center;
+}
+.footer-text{
+  font-size: 18px;
+}
+.footer-text a{
+  color: red;
+  text-decoration: none;
+  font-weight: 700;
+}
+.footer-text .icon{
+  color: red;
 }
