--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,6 +42,10 @@ body{
 
   font-size: 18px;
 }
+.link{
+  text-decoration: none;
+  color: #43A230;
+}
 .header-menu-link{
   height: 60px;
   display: inline-block;
