--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,6 +61,8 @@ body{
   background-color: rgb(0, 0, 0,0.2); /*Uso el metodo de color rgb por que no se busca que cambie el color sino que baje o aumente su luz*/
 
 }
+
+
 .cover{
   background-image: url('../img/portada.png');
   background-position: center;
@@ -105,6 +107,7 @@ body{
   font-size: 26px;
   text-transform: uppercase;
   text-decoration: underline; /*SUBRALLADO*/
+
 
 }
 
@@ -160,7 +163,7 @@ body{
 }
 .skills-text{
   text-transform: uppercase;
-  color: #606060;
+  color: #ffffff;
   font-weight: 700;
   margin: 10px 0;
   padding: 10px 0;
@@ -180,7 +183,7 @@ body{
 .skills-bar{
   width: 100%;
   height: 30px;
-  background: #9e9e9e;
+  background: #ffffff;
 }
 
 .skills-bar-fulling{
@@ -248,7 +251,7 @@ body{
   float: right;
 }
 .contact-column label{
-  color: #606060;
+  color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 16px;
@@ -278,8 +281,9 @@ body{
   height: 150px;
 }
 .footer{
-  background: #d1d1d1;
-  margin-top: 10px;
+  background-image: url('../img/portada.png');
+  background-position: center;
+  background-size: cover;
 }
 .footer-wrapper{
   width: 1200px;
@@ -289,6 +293,7 @@ body{
   text-align: center;
 }
 .footer-text{
+  color: white;
   font-size: 18px;
 }
 .footer-text a{
@@ -296,6 +301,7 @@ body{
   text-decoration: none;
   font-weight: 700;
 }
+
 .footer-text .icon{
   color: red;
 }
