--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,9 +56,10 @@ body{
   color: #ffffff;
   text-decoration: none;
   font-weight: 700;
+  background-color: rgb(0, 0, 0,0.2);
 }
 .header-menu-link:hover{/*psudoclase hover cuando se pise el elemento quiero que se comporte así:*/
-  background-color: rgb(0, 0, 0,0.2); /*Uso el metodo de color rgb por que no se busca que cambie el color sino que baje o aumente su luz*/
+  background-color: rgb(20,100,100,0.7); /*Uso el metodo de color rgb por que no se busca que cambie el color sino que baje o aumente su luz*/
 
 }
 
@@ -82,7 +83,7 @@ body{
   border-radius: 50%;
 }
 .cover-text{
-  background-color: rgba(20,200,100,0.7);
+  background-color: rgba(20,100,100,0.7);
   color: #ffffff;
   display: inline-block;
   padding: 30px;
